--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Discover Amazing places in Japan</title>
-    <link rel="stylesheet" href="./css/reset.css" />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./src/css/reset.css" />
+    <link rel="stylesheet" href="./src/css/style.css" />
   </head>
   <body>
     <header class="header">
@@ -14,7 +14,7 @@
           <div class="header__logo">
             <a href="/" class="header__logo-link">
               <img
-                src="./img/svg/odigo-logo.svg"
+                src="./src/img/svg/odigo-logo.svg"
                 alt="odigo-logo"
                 class="header__logo-pic"
               />
